--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A web application build to display several locations on a map and display specific information for each location.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "next build",
+    "dev": "next",
+    "start": "next start"
   },
   "repository": {
     "type": "git",
